--- a/src/Layout/Header/header.stylesheet.scss
+++ b/src/Layout/Header/header.stylesheet.scss
@@ -6,6 +6,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  @media print {
+    display: none;
+  }
   .search-section{
 
   }
