--- a/src/Layout/SideBar/sideBar.stylesheet.scss
+++ b/src/Layout/SideBar/sideBar.stylesheet.scss
@@ -5,6 +5,9 @@
     color: $title-color; //$dls-secondary1;
     border-right: 2px solid $dls-secondary2;
     box-shadow: 0px 8px 16px 0px $dls-secondary2;
+    @media print {
+        display: none;
+    }
     .sidebar-top {
         background-color: $header-background;
         width: 100%;
@@ -20,8 +23,16 @@
             width: 20px;
             height: 20px;
         }
+        .close-header {
+            display: none;
+        }
     }
 }
+
+.sidebar-main-container-close {
+    width: 70px;
+}
+
 .selected-tab {
     background-color: $sidebar-background;
     color: #429a70;
